--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -1,9 +1,10 @@
 <section>
 
-	<div id='Title'>Bienvenido al PiolaChat</div>
+	<div id='Title'>Chateando</div>
 	<div id='messages'></div>
-	<div>
+	<div class="contenedor-envio">
 		<input type='text' id='msj' />
+		<button id='sendBtn'>Enviar</button>
 	</div>
 
 </section>
@@ -12,4 +13,4 @@
 	src='https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js'
 ></script>
 <script src='/socket.io/socket.io.js'></script>
-<script src='/js/main.js'></script>
+<script src="/js/chat.js"></script>
