--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,4 @@
+
 <h1 class="productListTitle">Listado de Productos</h1>
 
 <h4>Los productos agregados hasta el momento son:</h4>
@@ -25,4 +26,5 @@
   </div>
 </div>
 
+<script src="/socket.io/socket.io.js"></script>
 <script src="/js/index.js"></script>
