--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -12,7 +12,7 @@
                 <div class="col-md-3">
                     <div class="card w-70 h-400"style="margin: 10px; padding: 10px; border: 1px solid black;">
                         <img src="{{this.thumbnail}}" class="card-img-top" alt="Imagen del producto">
-                        <hr style="margin: 0; border-top: 1px solid black;">
+                        <hr class="card-divider">
                         <div class="card-body">
                             <h5 class="card-title"style="font-size: 30px;">{{this.title}}</h5>
                             <ul class="list-unstyled">
