entrega login con passport

--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -4,14 +4,15 @@
 			<img src='{{user.img}}' alt='logo' class='img-fluid' />
 		</div>
 		<div class='col-8' style='padding: 50px 20px;'>
-			<h1>Hola, {{user.first_name}} {{user.last_name}}</h1>
+			<h1>Hola ADMINISTRADOR</h1>
 
-			<p>No te olvides de tus datos!!</p>
+			<p>ESTA ES TU RUTA PRIVADA</p>
 
 			<ul>
 				<li><b>Nombre: </b>{{user.first_name}}</li>
 				<li><b>Apellido: </b>{{user.last_name}}</li>
 				<li><b>Correo: </b>{{user.email}}</li>
+				<li><b>Rol: </b>ADMIN</li>
 			</ul>
 		</div>
 	</div>
