--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
 		<div class='col-8' style='padding: 50px 20px;'>
 			<h1>Hola, {{user.first_name}} {{user.last_name}}</h1>
 
-			<p>No te olvides de tus datos!!</p>
+			<p>Estos son tus datos:</p>
 
 			<ul>
 				<li><b>Nombre: </b>{{user.first_name}}</li>
