--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,8 +28,19 @@
 						type='submit'
 						class='btn btn-primary col-12'
 					>Ingresar</button>
+
+					<a
+						href='/api/sessions/github'
+						type='submit'
+						class='btn btn-primary col-12'
+						style='background: #333; color: #fff; margin-top: 10px'
+					>Ingresar con GitHub</a>
 				</div>
 			</form>
 		</div>
+	</div>
+	<div class="text-center mt-4">
+				<p>No tienes una cuenta? Regístrate</p>
+				<button class="btn btn-primary col-2" onclick="location.href='/register'">Crear Usuario</button>
 	</div>
 </section>
