segunda practica integradora

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,18 @@
+<style>
+	body {
+		background: linear-gradient(to bottom, #7cf0f0, #c276e6);
+		 /* Cambia el color de fondo según tus preferencias */
+	}
+
+	.login-section {
+		border-radius: 5px;
+		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+		padding: 50px 20px;
+		margin-top: 20px;
+	}
+
+	
+</style>
 <section class='container'>
 	<div class='row bg-light login-section'>
 		<div class='col-4'>
