--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,3 +1,23 @@
+<style>
+	body {
+		background: linear-gradient(to bottom, #7cf0f0, #c276e6);
+		 /* Cambia el color de fondo según tus preferencias */
+	}
+
+    .card {
+        border-radius: 5px;
+		background-color: #f0fcfd;
+		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+		padding: 50px 20px;
+    }
+
+    .btn-primary {
+		border-color: #000000;
+		background: linear-gradient(to bottom, #6a41ff, #c57ce7);
+		color: #fff;
+	}
+</style>   
+
 <div><br /></div>
 
 <div class="container">
