--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -80,5 +80,4 @@
         </div>
     </div>
 </div>
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script>
+<script src="/index.js"></script>
