--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -73,7 +73,7 @@
 						<input type="password" class="form-control" placeholder="Contraseña" aria-label="Contraseña" name="password" required>
 					</div>
 					<button type="submit" class="btn btn-primary btn-block">Ingresar</button>
-					<a href="/api/sessions/github" class="btn btn-primary btn-block">Ingresar con GitHub</a>
+					<a href="/api/users/github" class="btn btn-primary btn-block">Ingresar con GitHub</a>
 				</form>
 				<div class="register-link text-center">
 					<p>¿No tienes una cuenta? Regístrate</p>
