--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -1,15 +1,13 @@
-<h1>Carrito de Compras</h1>
+<div class="container-cart">
+   
+
+    <div id="mostrarCart" class="cart"></div>
+    <div id="ticket" class="cart"></div>
+    <div id="noproduct" class="cart"></div>
 
 
-<div class="cartContainer">
-  <h4>Productos en el carrito:</h4>
-  <ul class="cartList">
-    {{#each renderCart.products}}
-    <li class="cartItem">
-      <h5>Producto: {{this.product.title}}</h5>
-      <p>Cantidad: {{this.quantity}}</p>
-    </li>
-    {{/each}}
-  </ul>
 </div>
+
+
+<script src="/js/cart.js"></script>
 
